add animation classes to the landing page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="css/mdb.css" rel="stylesheet">
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Bad+Script|Love+Ya+Like+A+Sister|Playball&display=swap" rel="stylesheet">
+
+  <!-- animations -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/wickedcss.min.css">
+    <link rel="stylesheet" href="css/animate.css">
   </head>
   <body>
     <!-- Main navigation -->
@@ -26,10 +33,11 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="menu.html">Menu</a>
+              </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Profile</a>
+                  <a class="nav-link" href="#">Contacts</a>
                 </li>
               </ul>
               <form class="form-inline">
@@ -52,11 +60,11 @@
               <div class="row">
                 <!--Grid column-->
                 <div class="col-md-12 mb-4 white-text text-center">
-                  <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s" ><strong>Pizza Eat</strong></h1>
-                  <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                  <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Pizza makes everything better</strong></h5>
-                  <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">portfolio</a>
-                  <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">About me</a>
+                  <h1 class="h1-reponsive  mb-0 pt-md-5 pt-5 pulse" data-wow-delay="0.3s"><strong><span id="spanhead">Pi</span><span id="spanText">zz</span><span id="spanText3">a</span> <span id="spanText1">E</span><span id="spanText2">at</span> </strong></h1>
+                  <hr class="hr-light my-4" data-wow-delay="0.4s">
+                  <h5 class="text-uppercase mb-4 white-text floater"><strong>Pizza makes everything better</strong></h5>
+                  <a class="btn btn-success wiggle">ORDER NOW</a>
+                    <!-- <img height="20%" width="20%" id="mouse" src="images/round-removebg-preview.png" alt="mouse click"> -->
                 </div>
                 <!--Grid column-->
               </div>
@@ -66,7 +74,6 @@
           </div>
           <!-- Mask & flexbox options-->
         </div>
-      
         <!-- Full Page Intro -->
       </header>
       <!-- Main navigation -->
@@ -92,13 +99,13 @@
       <!-- JQuery -->
       <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
       <!-- Tooltips -->
-      <script type="text/javascript" src="js/popper.min.js"></script>
+      <!-- <script type="text/javascript" src="js/popper.min.js"></script> -->
       <!-- Bootstrap core JavaScript -->
-      <script type="text/javascript" src="js/bootstrap.min.js"></script>
+      <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
       <!-- MDB core JavaScript -->
       <script type="text/javascript" src="js/mdb.min.js"></script>
-      <script>
+      <!-- <script>
       new WOW().init();
-      </script>
+      </script> -->
   </body>
 </html>
