--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
               </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contacts</a>
+                  <a class="nav-link" href="contact.html">Contacts</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="test.html">Test</a>
                 </li>
               </ul>
               <form class="form-inline">
