add about us section and remove test link.

--- a/index.html
+++ b/index.html
@@ -30,22 +30,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="menu.html">Menu</a>
               </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contacts</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="test.html">Test</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
               <form class="form-inline">
                 <div class="md-form my-0">
-                  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <a class="nav-link text-white" href="#aboutUs">About</a>
+                  <!-- <input class="form-control mr-sm-2" type="text" placeholder="About.." aria-label="Search"> -->
+
                 </div>
               </form>
             </div>
@@ -66,7 +65,7 @@
                   <h1 class="h1-reponsive  mb-0 pt-md-5 pt-5 pulse" data-wow-delay="0.3s"><strong><span id="spanhead">Pi</span><span id="spanText">zz</span><span id="spanText3">a</span> <span id="spanText1">E</span><span id="spanText2">at</span> </strong></h1>
                   <hr class="hr-light my-4" data-wow-delay="0.4s">
                   <h5 class="text-uppercase mb-4 white-text floater"><strong>Pizza makes everything better</strong></h5>
-                  <a class="btn btn-success wiggle">ORDER NOW</a>
+                  <a class="btn btn-success wiggle" class="nav-link" href="menu.html">ORDER NOW</a>
                     <!-- <img height="20%" width="20%" id="mouse" src="images/round-removebg-preview.png" alt="mouse click"> -->
                 </div>
                 <!--Grid column-->
@@ -86,11 +85,14 @@
           <!--Grid row-->
           <div class="row py-5">
             <!--Grid column-->
-            <div class="col-md-12 text-center">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+            <div class="col-md-12 text-center" id="aboutUs">
+              <h2>About us</h2>
+              <p>Pizza eat! Brands, Inc., based in Louisville, Kentucky, has over 48,000 restaurants in more than 145 countries and territories primarily operating the company’s restaurant brands – KFC, Pizza Hut and Taco Bell – global leaders of the chicken, pizza and Mexican-style food categories. Worldwide, the Pizza eat! Brands system opens over eight new restaurants per day on average, making it a leader in global retail development.</p>
+              <p>In 2018, Pizza eat! Brands was named to the Dow Jones Sustainability North America Index and ranked among the top 100 Best Corporate Citizens by Corporate Responsibility Magazine. In 2019, Pizza eat! Brands was named to the Bloomberg Gender-Equality Index for the second consecutive year.
+              </p>
+              <p>Since our spin-off from PepsiCo in 1997, we’ve become a truly global company led by over 2,000 world-class franchisees. In 2016, we successfully spun off our China business as an independent, publicly traded company and announced our Recipe for Growth, our multi-year growth strategy to become more focused, more franchised and more efficient.</p>
+              <p>Our Recipe for Growth strategy includes four growth drivers and is the foundation on which our sustainable, long-term results are built. These drivers will allow us to keep our promises to serve delicious food, make our food accessible to customers, give employees a place to grow and make a difference, offer opportunities for franchisees and deliver strong returns and long-term value. These growth capabilities are the key drivers of same-store sales and net-new unit growth and serve as our guiding principles in all business decisions.</p>
+
             </div>
             <!--Grid column-->
           </div>
