--- a/contact.html
+++ b/contact.html
@@ -4,38 +4,40 @@
     <meta charset="utf-8">
     <title>contact us</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="css/mdb.css" rel="stylesheet">
+
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/mdb.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/wickedcss.min.css">
+    <link rel="stylesheet" href="css/animate.css">
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+  <body class="contact text-white">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" id="navcontact">
       <div class="container">
-        <a class="navbar-brand" href="#"><strong>Pizza</strong></a>
+      
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="menu.html">Menu</a>
           </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contacts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="test.html">Test</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
+
           </ul>
-          <form class="form-inline">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
+
         </div>
       </div>
     </nav>
@@ -47,73 +49,73 @@
         <div class="row">
           <!--Grid column-->
           <div class="col-md-12 text-center">
-            <h2 class="font-weight-bold text-center h1 my-5">Contact us</h2>
-            <p class="text-center grey-text mb-5 mx-auto w-responsive">Lorem ipsum dolor sit amet, consectetur
-              adipisicing elit. Fugit, error amet numquam iure provident voluptate
-              esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
+            <h2 class="font-weight-bold text-center h1 pt-3 my-5">Contact us</h2>
+            <p class="text-center text-white mb-5 mx-auto w-responsive" id="pcontact">Get in touch and let us know how to make your pizza experience better. Here at Pizza eat, we value your feedback.</p>
             </div>
         </div>
 
-        <div class="card pt-5">
+        <div class="card pt-5" id="contactcard">
           <div class="card-body" >
 
             <div class="container">
-              <h3 class="mt-4"><i class="fas fa-envelope pr-2"></i> Write to us:</h3>
+              <h3 class="mt-5 h3contact"><i class="fas fa-envelope pr-2"></i> Write to us:</h3>
 
-                <div class="row pt-5 text-center">
+                <div class="row pt-3 text-center">
 
                   <!--Grid column-->
-                  <div class="col-md-7 col-xl-9">
-                    <form>
+                  <div class="col-md-6 col-xl-9">
+                    <form id="form">
                       <div class="form-group">
                         <div class="md-form">
-                          <input type="text" id="contact-name" class="form-control">
-                          <label for="contact-name" class="">Your name</label>
+                          <input type="text" class="form-control input" id="name" placeholder="Your Name..." required>
                         </div>
                       </div>
                       <div class="form-group">
                         <div class="md-form">
-                          <input type="text" id="contact-email" class="form-control">
-                          <label for="contact-email" class="">Your email</label>
+                          <input type="text" class="form-control input" id="name" placeholder="Your Email..." required>
+
                         </div>
                       </div>
                       <div class="form-group">
                         <div class="md-form">
-                          <input type="text" id="contact-Subject" class="form-control">
-                          <label for="contact-Subject" class="">Subject</label>
+                          <input type="text" class="form-control input" id="name" placeholder="Subject..." required>
+
                         </div>
                       </div>
                       <div class="form-group">
                         <div class="md-form">
-                          <textarea type="text" id="contact-message" class="md-textarea form-control" rows="3"></textarea>
-                          <label for="contact-message">Your message</label>
-                          <a class="btn-floating btn-lg blue waves-effect waves-light">
-                  <i class="far fa-paper-plane"></i>
-                </a>
-                        </div>
+                          <textarea type="text" id="contact-message" class="md-textarea form-control" rows="1"></textarea>
+                          <input type="text" class="form-control input" id="name" placeholder="Your message..." required>
+
+                  </div>
                       </div>
+                      <div class="text-center text-md-left my-4 sendicon">
+                        <a class="btn-floating btn-lg blue waves-effect waves-light floater">
+                <i class="far fa-paper-plane"></i>
+              </a>
+              </div>
                     </form>
 
-                    <div class="text-center text-md-left my-4">
-                      <a class="btn peach-gradient">Send</a>
-                    </div>
+
+
+
                   </div>
 
-                  <div class="col-md-5 col-xl-3">
+                  <div class="col-md-6 col-xl-3">
                     <ul class="contact-icons text-center list-unstyled">
                       <li>
 
-                        <p><i class="fas fa-map-marker fa-2x orange-text"></i> San Francisco, CA 94126, USA</p>
+                        <p><i class="fas fa-map-marker fa-2x orange-text"></i> Nairobi, 02000, KENYA</p>
                       </li>
 
                       <li>
 
-                        <p id="tel" ><i class="fas fa-phone fa-2x orange-text"></i> + 01 234 567 89</p>
+                        <p id="tel" ><i class="fas fa-phone fa-2x orange-text"></i> + 254 723 456</p>
                       </li>
 
                       <li>
 
-                        <p><i class="fas fa-envelope fa-2x orange-text"></i> contact@mdbootstrap.com</p>
+                        <p><i class="fas fa-envelope fa-2x orange-text"></i> eatpizza@yahoo.com</p>
                       </li>
                     </ul>
                   </div>
