modifies the specified files and deleted test.html

--- a/menu.html
+++ b/menu.html
@@ -3,107 +3,51 @@
   <head>
     <meta charset="utf-8">
     <title>Menu</title>
-    <link rel="stylesheet" href="css/mdb.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="css/mdb.css" rel="stylesheet">
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Bad+Script|Love+Ya+Like+A+Sister|Playball&display=swap" rel="stylesheet">
+
+  <!-- animations -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/wickedcss.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+  </head>
   </head>
   <body class="bodyMenu">
-    <!-- Grid row -->
-<div class="row">
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="#"><strong>Pizza</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html">Menu</a>
+          </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+          <form class="form-inline">
+            <div class="md-form my-0">
+                <a class="nav-link text-white" href="#aboutUs">About</a>
+              <!-- <input class="form-control mr-sm-2" type="text" placeholder="About.." aria-label="Search"> -->
 
-  <!-- Grid column -->
-  <div class="col-md-4 ">
-
-    <!--Card-->
-    <div class="card default-color-dark">
-
-      <!--Card image-->
-      <div class="view">
-        <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(125).jpg" class="card-img-top" alt="photo">
-        <a href="#">
-          <div class="mask rgba-white-slight"></div>
-        </a>
-      </div>
-
-      <!--Card content-->
-      <div class="card-body text-center">
-        <!--Title-->
-        <h4 class="card-title white-text">Title of the news</h4>
-        <!--Text-->
-        <p class="card-text white-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-          quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.</p>
-        <a href="#" class="btn btn-outline-white btn-md waves-effect">Button</a>
-      </div>
-
-    </div>
-    <!--/.Card-->
-    <div class="col-md-4 mb-4">
-
-      <!--Card-->
-      <div class="card primary-color-dark">
-
-        <!--Card image-->
-        <div class="view">
-          <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(122).jpg" class="card-img-top" alt="photo">
-          <a href="#">
-            <div class="mask rgba-white-slight"></div>
-          </a>
+            </div>
+          </form>
         </div>
-
-        <!--Card content-->
-        <div class="card-body text-center">
-          <!--Title-->
-          <h4 class="card-title white-text">Title of the news</h4>
-          <!--Text-->
-          <p class="card-text white-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-            accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-            quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.</p>
-          <a href="#" class="btn btn-outline-white btn-md waves-effect">Button</a>
-        </div>
-
       </div>
-      <!--/.Card-->
+    </nav>
 
-    </div>
-    <div class="col-md-4 mb-4">
-
-      <!--Card-->
-      <div class="card primary-color-dark">
-
-        <!--Card image-->
-        <div class="view">
-          <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(122).jpg" class="card-img-top" alt="photo">
-          <a href="#">
-            <div class="mask rgba-white-slight"></div>
-          </a>
-        </div>
-
-        <!--Card content-->
-        <div class="card-body text-center">
-          <!--Title-->
-          <h4 class="card-title white-text">Title of the news</h4>
-          <!--Text-->
-          <p class="card-text white-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-            accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-            quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.</p>
-          <a href="#" class="btn btn-outline-white btn-md waves-effect">Button</a>
-        </div>
-
-      </div>
-      <!--/.Card-->
-
-    </div>
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-
-</div>
-<!-- Grid row -->
-
-<!-- Grid row -->
-
-  </body>
 </html>
