--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <title>contact us</title>
@@ -16,10 +17,11 @@
     <link rel="stylesheet" href="css/wickedcss.min.css">
     <link rel="stylesheet" href="css/animate.css">
   </head>
+
   <body class="contact text-white">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" id="navcontact">
       <div class="container">
-      
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +32,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="menu.html">Menu</a>
-          </li>
+            </li>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -51,86 +53,91 @@
           <div class="col-md-12 text-center">
             <h2 class="font-weight-bold text-center h1 pt-3 my-5">Contact us</h2>
             <p class="text-center text-white mb-5 mx-auto w-responsive" id="pcontact">Get in touch and let us know how to make your pizza experience better. Here at Pizza eat, we value your feedback.</p>
-            </div>
+          </div>
         </div>
 
         <div class="card pt-5" id="contactcard">
-          <div class="card-body" >
+          <div class="card-body">
 
             <div class="container">
               <h3 class="mt-5 h3contact"><i class="fas fa-envelope pr-2"></i> Write to us:</h3>
 
-                <div class="row pt-3 text-center">
+              <div class="row pt-3 text-center">
 
-                  <!--Grid column-->
-                  <div class="col-md-6 col-xl-9">
-                    <form id="form">
-                      <div class="form-group">
-                        <div class="md-form">
-                          <input type="text" class="form-control input" id="name" placeholder="Your Name..." required>
-                        </div>
+                <!--Grid column-->
+                <div class="col-md-6 col-xl-9">
+                  <form id="form">
+                    <div class="form-group">
+                      <div class="md-form">
+                        <input type="text" class="form-control input" id="name" placeholder="Your Name..." required>
                       </div>
-                      <div class="form-group">
-                        <div class="md-form">
-                          <input type="text" class="form-control input" id="name" placeholder="Your Email..." required>
+                    </div>
+                    <div class="form-group">
+                      <div class="md-form">
+                        <input type="text" class="form-control input" id="name" placeholder="Your Email..." required>
 
-                        </div>
                       </div>
-                      <div class="form-group">
-                        <div class="md-form">
-                          <input type="text" class="form-control input" id="name" placeholder="Subject..." required>
+                    </div>
+                    <div class="form-group">
+                      <div class="md-form">
+                        <input type="text" class="form-control input" id="name" placeholder="Subject..." required>
 
-                        </div>
                       </div>
-                      <div class="form-group">
-                        <div class="md-form">
-                          <textarea type="text" id="contact-message" class="md-textarea form-control" rows="1"></textarea>
-                          <input type="text" class="form-control input" id="name" placeholder="Your message..." required>
+                    </div>
+                    <div class="form-group">
+                      <div class="md-form">
+                        <textarea type="text" id="contact-message" class="md-textarea form-control" rows="1"></textarea>
+                        <input type="text" class="form-control input" id="name" placeholder="Your message..." required>
 
-                  </div>
                       </div>
-                      <div class="text-center text-md-left my-4 sendicon">
-                        <a class="btn-floating btn-lg blue waves-effect waves-light floater">
+                    </div>
+                    <div class="text-center text-md-left my-4 sendicon ">
+                      <a class="btn-floating btn-lg blue waves-effect waves-light floater">
                 <i class="far fa-paper-plane"></i>
               </a>
+                    </div>
+                  </form>
+
+
+
+
+                </div>
+
+                <div class="col-md-6 col-xl-3">
+                  <ul class="contact-icons text-center list-unstyled">
+                    <li>
+
+                      <p><i class="fas fa-map-marker fa-2x orange-text"></i> Nairobi, 02000, KENYA</p>
+                    </li>
+
+                    <li>
+
+                      <p id="tel"><i class="fas fa-phone fa-2x orange-text"></i> + 254 723 456</p>
+                    </li>
+
+                    <li>
+
+                      <p><i class="fas fa-envelope fa-2x orange-text"></i> eatpizza@yahoo.com</p>
+                    </li>
+                  </ul>
+                </div>
+
+
+
               </div>
-                    </form>
-
-
-
-
-                  </div>
-
-                  <div class="col-md-6 col-xl-3">
-                    <ul class="contact-icons text-center list-unstyled">
-                      <li>
-
-                        <p><i class="fas fa-map-marker fa-2x orange-text"></i> Nairobi, 02000, KENYA</p>
-                      </li>
-
-                      <li>
-
-                        <p id="tel" ><i class="fas fa-phone fa-2x orange-text"></i> + 254 723 456</p>
-                      </li>
-
-                      <li>
-
-                        <p><i class="fas fa-envelope fa-2x orange-text"></i> eatpizza@yahoo.com</p>
-                      </li>
-                    </ul>
-                  </div>
-
-
-
-                  </div>
             </div>
-          </div>  <!--Grid column-->
+          </div>
+          <!--Grid column-->
 
         </div>
       </div>
 
     </main>
     <!--Main Layout-->
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
+
 </html>
