add icon to link to the about us section.

--- a/index.html
+++ b/index.html
@@ -1,116 +1,124 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <title>Pizza Eat</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-  <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- Material Design Bootstrap -->
-  <link href="css/mdb.css" rel="stylesheet">
-  <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Bad+Script|Love+Ya+Like+A+Sister|Playball&display=swap" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="css/mdb.css" rel="stylesheet">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script|Love+Ya+Like+A+Sister|Playball&display=swap" rel="stylesheet">
 
-  <!-- animations -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <!-- animations -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/wickedcss.min.css">
     <link rel="stylesheet" href="css/animate.css">
   </head>
+
   <body>
     <!-- Main navigation -->
-      <header>
-        <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-          <div class="container">
-            <a class="navbar-brand" href="#"><strong>Pizza</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+    <header>
+      <!--Navbar-->
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+        <div class="container">
+          <a class="navbar-brand" href="#"><strong>Pizza</strong></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="menu.html">Menu</a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-              <form class="form-inline">
-                <div class="md-form my-0">
-                    <a class="nav-link text-white" href="#aboutUs">About</a>
-                  <!-- <input class="form-control mr-sm-2" type="text" placeholder="About.." aria-label="Search"> -->
+              <li class="nav-item">
+                <a class="nav-link" href="menu.html">Menu</a>
+              </li>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
 
-                </div>
-              </form>
-            </div>
           </div>
-        </nav>
-        <!-- Navbar -->
-        <!-- Full Page Intro -->
-        <div class="view jarallax" data-jarallax='{"speed": 0.2}'>
+        </div>
+      </nav>
+      <!-- Navbar -->
+      <!-- Full Page Intro -->
+      <div class="view jarallax" data-jarallax='{"speed": 0.2}'>
 
-          <!-- Mask & flexbox options-->
-          <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-            <!-- Content -->
-            <div class="container">
-              <!--Grid row-->
-              <div class="row">
-                <!--Grid column-->
-                <div class="col-md-12 mb-4 white-text text-center">
-                  <h1 class="h1-reponsive  mb-0 pt-md-5 pt-5 pulse" data-wow-delay="0.3s"><strong><span id="spanhead">Pi</span><span id="spanText">zz</span><span id="spanText3">a</span> <span id="spanText1">E</span><span id="spanText2">at</span> </strong></h1>
-                  <hr class="hr-light my-4" data-wow-delay="0.4s">
-                  <h5 class="text-uppercase mb-4 white-text floater"><strong>Pizza makes everything better</strong></h5>
-                  <a class="btn btn-success wiggle" class="nav-link" href="menu.html">ORDER NOW</a>
-                    <!-- <img height="20%" width="20%" id="mouse" src="images/round-removebg-preview.png" alt="mouse click"> -->
+        <!-- Mask & flexbox options-->
+        <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+          <!-- Content -->
+          <div class="container">
+            <!--Grid row-->
+            <div class="row">
+              <!--Grid column-->
+              <div class="col-md-12 mb-4 white-text text-center">
+                <h1 class="h1-reponsive  mb-0 pt-md-5 pt-5 pulse" data-wow-delay="0.3s"><strong><span id="spanhead">Pi</span><span id="spanText">zz</span><span id="spanText3">a</span> <span id="spanText1">E</span><span id="spanText2">at</span> </strong></h1>
+                <hr class="hr-light my-4" data-wow-delay="0.4s">
+                <h5 class="text-uppercase mb-4 white-text floater"><strong>Pizza makes everything better</strong></h5>
+                <a class="btn btn-success wiggle" class="nav-link" href="menu.html">ORDER NOW</a>
+                <div class="text-center text-md-left my-4 sendicon" id="icon">
+                  <a class="btn-floating btn-lg blue waves-effect waves-light floater" href="#aboutUs">
+                      <i class="far fa-paper-plane"></i>
+
+                    </a>
                 </div>
-                <!--Grid column-->
               </div>
-              <!--Grid row-->
+              <!--Grid column-->
             </div>
-            <!-- Content -->
+            <!--Grid row-->
           </div>
-          <!-- Mask & flexbox options-->
+          <!-- Content -->
         </div>
-        <!-- Full Page Intro -->
-      </header>
-      <!-- Main navigation -->
-      <!--Main Layout-->
-      <main>
-        <div class="container">
-          <!--Grid row-->
-          <div class="row py-5">
-            <!--Grid column-->
-            <div class="col-md-12 text-center" id="aboutUs">
-              <h2>About us</h2>
-              <p>Pizza eat! Brands, Inc., based in Louisville, Kentucky, has over 48,000 restaurants in more than 145 countries and territories primarily operating the company’s restaurant brands – KFC, Pizza Hut and Taco Bell – global leaders of the chicken, pizza and Mexican-style food categories. Worldwide, the Pizza eat! Brands system opens over eight new restaurants per day on average, making it a leader in global retail development.</p>
-              <p>In 2018, Pizza eat! Brands was named to the Dow Jones Sustainability North America Index and ranked among the top 100 Best Corporate Citizens by Corporate Responsibility Magazine. In 2019, Pizza eat! Brands was named to the Bloomberg Gender-Equality Index for the second consecutive year.
-              </p>
-              <p>Since our spin-off from PepsiCo in 1997, we’ve become a truly global company led by over 2,000 world-class franchisees. In 2016, we successfully spun off our China business as an independent, publicly traded company and announced our Recipe for Growth, our multi-year growth strategy to become more focused, more franchised and more efficient.</p>
-              <p>Our Recipe for Growth strategy includes four growth drivers and is the foundation on which our sustainable, long-term results are built. These drivers will allow us to keep our promises to serve delicious food, make our food accessible to customers, give employees a place to grow and make a difference, offer opportunities for franchisees and deliver strong returns and long-term value. These growth capabilities are the key drivers of same-store sales and net-new unit growth and serve as our guiding principles in all business decisions.</p>
+        <!-- Mask & flexbox options-->
+      </div>
+      <!-- Full Page Intro -->
+    </header>
+    <!-- Main navigation -->
+    <!--Main Layout-->
+    <main>
+      <div class="container">
+        <!--Grid row-->
+        <div class="row py-5">
+          <!--Grid column-->
+          <div class="col-md-12 text-center" id="aboutUs">
+            <h2>About us</h2>
+            <p>Pizza eat! Brands, Inc., based in Nairobi, South C, has over 48,000 restaurants in more than 145 countries and territories primarily operating the company’s restaurant brands – KFC, Pizza Hut and Taco Bell – global leaders of the chicken,
+              pizza and Mexican-style food categories. Worldwide, the Pizza eat! Brands system opens over eight new restaurants per day on average, making it a leader in global retail development.</p>
+            <p>In 2018, Pizza eat! Brands was named to the Dow Jones Sustainability North America Index and ranked among the top 100 Best Corporate Citizens by Corporate Responsibility Magazine. In 2019, Pizza eat! Brands was named to the Bloomberg Gender-Equality
+              Index for the second consecutive year.
+            </p>
+            <p>Since our spin-off from PepsiCo in 1997, we’ve become a truly global company led by over 2,000 world-class franchisees. In 2016, we successfully spun off our China business as an independent, publicly traded company and announced our Recipe
+              for Growth, our multi-year growth strategy to become more focused, more franchised and more efficient.</p>
+            <p>Our Recipe for Growth strategy includes four growth drivers and is the foundation on which our sustainable, long-term results are built. These drivers will allow us to keep our promises to serve delicious food, make our food accessible to
+              customers, give employees a place to grow and make a difference, offer opportunities for franchisees and deliver strong returns and long-term value. These growth capabilities are the key drivers of same-store sales and net-new unit growth
+              and serve as our guiding principles in all business decisions.</p>
 
-            </div>
-            <!--Grid column-->
           </div>
-          <!--Grid row-->
+          <!--Grid column-->
         </div>
-      </main>
-      <!--Main Layout-->
-      <!-- SCRIPTS -->
-      <!-- JQuery -->
-      <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-      <!-- Tooltips -->
-      <!-- <script type="text/javascript" src="js/popper.min.js"></script> -->
-      <!-- Bootstrap core JavaScript -->
-      <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
-      <!-- MDB core JavaScript -->
-      <script type="text/javascript" src="js/mdb.min.js"></script>
-      <!-- <script>
+        <!--Grid row-->
+      </div>
+      <p class="text-center"><i class="far fa-copyright"></i>Pizza Eat | 2019</p>
+    </main>
+    <!--Main Layout-->
+    <!-- SCRIPTS -->
+    <!-- JQuery -->
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <!-- Tooltips -->
+    <!-- <script type="text/javascript" src="js/popper.min.js"></script> -->
+    <!-- Bootstrap core JavaScript -->
+    <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <!-- <script>
       new WOW().init();
       </script> -->
   </body>
+
 </html>
